스프링부트 복습

--- a/spring-boot-journal/src/main/resources/templates/index.html
+++ b/spring-boot-journal/src/main/resources/templates/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<html lang="en-US" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="utf-8"></meta>
   <meta http-equiv="Content-Type" content="text/html"></meta>
-  <title>스프링 부트</title>
+  <title>스프링 부트 일기</title>
   <link rel="stylesheet" type="text/css" media="all" href="css/bootstrap.min.css"></link>
   <link rel="stylesheet" type="text/css" media="all" href="css/bootstrap-glyphicons.css"></link>
   <link rel="stylesheet" type="text/css" media="all" href="css/styles.css"></link>
@@ -11,7 +11,7 @@
 
 <body>
 <div class="container">
-  <h1>스프링 부트</h1>
+  <h1>스프링 부트 일기</h1>
 
   <ul class="timeline">
    <div th:each="entry,status : ${journal}">
